# ambe-transcoding

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/src/: decode.cpp  encode.cpp  main.cpp
cmake/: toolchain-hf.cmake
cmake/Modules/: FindApcoP2.cmake  Findnlohmann_json.cmake
dvsi/: .gitignore
sound/: README.txt
